--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ transition: all .3s ease-in;
 
 body{
 background-color: #1b1b1b;
-min-width: 100vw;
-min-height: 100vh;
-overflow-x: hidden;
+width: 100%;
+height: 100vh;
+overflow: hidden;
+position: relative;
 }
 
 .container{
@@ -25,7 +26,6 @@ background-color: #161616;
 justify-content: space-between;
 align-items: center;
 padding: 20px 0;
-position: relative;
 height: 15vh;
 }
 
@@ -47,15 +47,13 @@ font-weight: 800;
     position: absolute;
     right: 0;   
     top: 15vh;
-    min-height: 80vh;
+    width: 0;
     overflow: hidden;
-    transform: translateX(1450px);
     transition: all .6s ease-in-out;
 }
 .container .menu-nav .menu-container-itens{
     padding: 20px;
     background-color: rgb(29, 29, 29);
-    display: block;
     list-style: none;
     width: 100vw;
 }
@@ -80,7 +78,8 @@ font-weight: 800;
     position: absolute;
     right: 0;   
     top: 15vh;
-    transform: translateX(0);
+    display: block;
+    width: 100vw;
 }
 
 
