--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 background-color: #1b1b1b;
 width: 100%;
 height: 100vh;
-overflow: hidden;
+overflow-x: hidden;
 position: relative;
 }
 
@@ -112,4 +112,35 @@ body.mudarCor .container .menu-nav .menu-container-itens{
 body.mudarCor .container .menu-nav .menu-container-itens li a{
     color: #161616;
     transform: all .3s ease-in-out;
+}
+
+.conteudo .container-div{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    justify-content: center;
+    overflow-x: scroll;
+}
+body.mudarCor .conteudo .container-div .card{
+    background-color: #afafaf;
+}
+.conteudo .container-div .card{
+    background-color: rgb(223, 223, 223);
+    margin: 10px;
+    min-height: 400px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-radius: 5px;
+}
+.conteudo .container-div .card  button{
+    margin-bottom: 10px;
+    min-width: 80%;
+    border: none;
+    padding: 1em 4em;
+    background-color: #1b1b1b;
+    color: white;
+    font-size: .80em;
+    text-transform: uppercase;
+    font-weight: 400;
+    border-radius: 5px;
 }
