--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ body.mudarCor .container .menu-nav .menu-container-itens li a{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     justify-content: center;
-    overflow-x: scroll;
 }
 body.mudarCor .conteudo .container-div .card{
     background-color: #afafaf;
@@ -128,9 +127,17 @@ body.mudarCor .conteudo .container-div .card{
     margin: 10px;
     min-height: 400px;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     border-radius: 5px;
+}
+.conteudo .container-div .card .image{
+    margin: 20px auto;
+    text-align: center;
+}
+.conteudo .container-div .card .image img{
+    width: 90%;
 }
 .conteudo .container-div .card  button{
     margin-bottom: 10px;
